src/test/deca/syntax/valid/print_quote.deca
// Description:
//    tests de programme correct lexicalement
//
// Resultats:
//    Je dis "bonjour"
//
// Historique:
//    cree le 13/01/2017

{ println("Je dis \"bonjour\" ");
}
